y.output
Terminals unused in grammar

   PR_AS
   PR_DIM


Gramática

    0 $accept: pgm $end

    1 pgm: programa

    2 programa: PR_MAIN declaracion_variables lista_sentencias
    3         | PR_MAIN lista_sentencias

    4 sentencia: asignacion PUNTO_Y_COMA
    5          | between PUNTO_Y_COMA
    6          | average PUNTO_Y_COMA

    7 lista_sentencias: sentencia
    8                 | sentencia lista_sentencias

    9 sentencia: condicional
   10          | iteracion
   11          | io PUNTO_Y_COMA

   12 between: PR_BETWEEN PAR_ABRE TOKEN_ID COMA COR_ABRE expresion PUNTO_Y_COMA expresion COR_CIERRA PAR_CIERRA

   13 average: PR_AVERAGE PAR_ABRE COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

   14 lista_expresiones: expresion
   15                  | expresion COMA lista_expresiones

   16 io: entrada
   17   | salida

   18 entrada: PR_READ TOKEN_ID

   19 salida: PR_WRITE TOKEN_ID
   20       | PR_WRITE CONST_STR

   21 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA then PR_ENDIF
   22            | PR_IF PAR_ABRE condicion PAR_CIERRA then else PR_ENDIF

   23 then: PR_THEN lista_sentencias

   24 else: PR_ELSE lista_sentencias

   25 condicion: comparacion
   26          | comparacion OP_LOG_AND comparacion
   27          | comparacion OP_LOG_OR comparacion

   28 comparacion: expresion comparador expresion
   29            | PR_NOT expresion

   30 iteracion: PR_WHILE PAR_ABRE condicion PAR_CIERRA PR_DO lista_sentencias PR_ENDWHILE

   31 asignacion: TOKEN_ID OP_IGUAL expresion

   32 expresion: factor OP_CONCAT factor
   33          | termino
   34          | expresion OP_SUMA termino
   35          | expresion OP_RESTA termino

   36 termino: factor
   37        | termino OP_DIV factor
   38        | termino OP_MUL factor

   39 factor: between
   40       | CONST_STR
   41       | CONST_INT
   42       | CONST_FLOAT
   43       | TOKEN_ID

   44 declaracion_variables: PR_DECVAR linea_de_declaracion_de_tipos PR_ENDDEC PUNTO_Y_COMA

   45 linea_de_declaracion_de_tipos: lista_variables DOS_PUNTOS tipo_dato PUNTO_Y_COMA
   46                              | lista_variables DOS_PUNTOS tipo_dato PUNTO_Y_COMA linea_de_declaracion_de_tipos

   47 lista_variables: TOKEN_ID
   48                | TOKEN_ID COMA lista_variables

   49 tipo_dato: PR_INT
   50          | PR_FLOAT
   51          | PR_STRING

   52 comparador: OP_MAYOR
   53           | OP_MENOR
   54           | OP_MENOR_IGUAL
   55           | OP_MAYOR_IGUAL
   56           | OP_IGUAL_IGUAL
   57           | OP_DISTINTO


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOKEN_ID (258) 12 18 19 31 43 47 48
CONST_INT (259) 41
CONST_STR (260) 20 40
CONST_FLOAT (261) 42
PR_MAIN (262) 2 3
PR_WRITE (263) 19 20
PR_READ (264) 18
PR_IF (265) 21 22
PR_THEN (266) 23
PR_ENDIF (267) 21 22
PR_ELSE (268) 24
PR_NOT (269) 29
PR_WHILE (270) 30
PR_DO (271) 30
PR_ENDWHILE (272) 30
PR_AVERAGE (273) 13
PR_DECVAR (274) 44
PR_ENDDEC (275) 44
PR_BETWEEN (276) 12
PAR_ABRE (277) 12 13 21 22 30
PAR_CIERRA (278) 12 13 21 22 30
COR_ABRE (279) 12 13
COR_CIERRA (280) 12 13
COMA (281) 12 15 48
OP_LOG_AND (282) 26
OP_LOG_OR (283) 27
OP_SUMA (284) 34
OP_RESTA (285) 35
OP_MUL (286) 38
OP_DIV (287) 37
OP_MAYOR (288) 52
OP_MAYOR_IGUAL (289) 55
OP_MENOR (290) 53
OP_MENOR_IGUAL (291) 54
OP_DISTINTO (292) 57
OP_IGUAL_IGUAL (293) 56
OP_IGUAL (294) 31
PR_AS (295)
PR_DIM (296)
PR_FLOAT (297) 50
PR_INT (298) 49
PR_STRING (299) 51
OP_CONCAT (300) 32
PUNTO_Y_COMA (301) 4 5 6 11 12 44 45 46
DOS_PUNTOS (302) 45 46


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
pgm (49)
    en la izquierda: 1, en la derecha: 0
programa (50)
    en la izquierda: 2 3, en la derecha: 1
sentencia (51)
    en la izquierda: 4 5 6 9 10 11, en la derecha: 7 8
lista_sentencias (52)
    en la izquierda: 7 8, en la derecha: 2 3 8 23 24 30
between (53)
    en la izquierda: 12, en la derecha: 5 39
average (54)
    en la izquierda: 13, en la derecha: 6
lista_expresiones (55)
    en la izquierda: 14 15, en la derecha: 13 15
io (56)
    en la izquierda: 16 17, en la derecha: 11
entrada (57)
    en la izquierda: 18, en la derecha: 16
salida (58)
    en la izquierda: 19 20, en la derecha: 17
condicional (59)
    en la izquierda: 21 22, en la derecha: 9
then (60)
    en la izquierda: 23, en la derecha: 21 22
else (61)
    en la izquierda: 24, en la derecha: 22
condicion (62)
    en la izquierda: 25 26 27, en la derecha: 21 22 30
comparacion (63)
    en la izquierda: 28 29, en la derecha: 25 26 27
iteracion (64)
    en la izquierda: 30, en la derecha: 10
asignacion (65)
    en la izquierda: 31, en la derecha: 4
expresion (66)
    en la izquierda: 32 33 34 35, en la derecha: 12 14 15 28 29 31
    34 35
termino (67)
    en la izquierda: 36 37 38, en la derecha: 33 34 35 37 38
factor (68)
    en la izquierda: 39 40 41 42 43, en la derecha: 32 36 37 38
declaracion_variables (69)
    en la izquierda: 44, en la derecha: 2
linea_de_declaracion_de_tipos (70)
    en la izquierda: 45 46, en la derecha: 44 46
lista_variables (71)
    en la izquierda: 47 48, en la derecha: 45 46 48
tipo_dato (72)
    en la izquierda: 49 50 51, en la derecha: 45 46
comparador (73)
    en la izquierda: 52 53 54 55 56 57, en la derecha: 28


estado 0

    0 $accept: . pgm $end

    PR_MAIN  desplazar e ir al estado 1

    pgm       ir al estado 2
    programa  ir al estado 3


estado 1

    2 programa: PR_MAIN . declaracion_variables lista_sentencias
    3         | PR_MAIN . lista_sentencias

    TOKEN_ID    desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8
    PR_AVERAGE  desplazar e ir al estado 9
    PR_DECVAR   desplazar e ir al estado 10
    PR_BETWEEN  desplazar e ir al estado 11

    sentencia              ir al estado 12
    lista_sentencias       ir al estado 13
    between                ir al estado 14
    average                ir al estado 15
    io                     ir al estado 16
    entrada                ir al estado 17
    salida                 ir al estado 18
    condicional            ir al estado 19
    iteracion              ir al estado 20
    asignacion             ir al estado 21
    declaracion_variables  ir al estado 22


estado 2

    0 $accept: pgm . $end

    $end  desplazar e ir al estado 23


estado 3

    1 pgm: programa .

    $default  reduce usando la regla 1 (pgm)


estado 4

   31 asignacion: TOKEN_ID . OP_IGUAL expresion

    OP_IGUAL  desplazar e ir al estado 24


estado 5

   19 salida: PR_WRITE . TOKEN_ID
   20       | PR_WRITE . CONST_STR

    TOKEN_ID   desplazar e ir al estado 25
    CONST_STR  desplazar e ir al estado 26


estado 6

   18 entrada: PR_READ . TOKEN_ID

    TOKEN_ID  desplazar e ir al estado 27


estado 7

   21 condicional: PR_IF . PAR_ABRE condicion PAR_CIERRA then PR_ENDIF
   22            | PR_IF . PAR_ABRE condicion PAR_CIERRA then else PR_ENDIF

    PAR_ABRE  desplazar e ir al estado 28


estado 8

   30 iteracion: PR_WHILE . PAR_ABRE condicion PAR_CIERRA PR_DO lista_sentencias PR_ENDWHILE

    PAR_ABRE  desplazar e ir al estado 29


estado 9

   13 average: PR_AVERAGE . PAR_ABRE COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    PAR_ABRE  desplazar e ir al estado 30


estado 10

   44 declaracion_variables: PR_DECVAR . linea_de_declaracion_de_tipos PR_ENDDEC PUNTO_Y_COMA

    TOKEN_ID  desplazar e ir al estado 31

    linea_de_declaracion_de_tipos  ir al estado 32
    lista_variables                ir al estado 33


estado 11

   12 between: PR_BETWEEN . PAR_ABRE TOKEN_ID COMA COR_ABRE expresion PUNTO_Y_COMA expresion COR_CIERRA PAR_CIERRA

    PAR_ABRE  desplazar e ir al estado 34


estado 12

    7 lista_sentencias: sentencia .
    8                 | sentencia . lista_sentencias

    TOKEN_ID    desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8
    PR_AVERAGE  desplazar e ir al estado 9
    PR_BETWEEN  desplazar e ir al estado 11

    $default  reduce usando la regla 7 (lista_sentencias)

    sentencia         ir al estado 12
    lista_sentencias  ir al estado 35
    between           ir al estado 14
    average           ir al estado 15
    io                ir al estado 16
    entrada           ir al estado 17
    salida            ir al estado 18
    condicional       ir al estado 19
    iteracion         ir al estado 20
    asignacion        ir al estado 21


estado 13

    3 programa: PR_MAIN lista_sentencias .

    $default  reduce usando la regla 3 (programa)


estado 14

    5 sentencia: between . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 36


estado 15

    6 sentencia: average . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 37


estado 16

   11 sentencia: io . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 38


estado 17

   16 io: entrada .

    $default  reduce usando la regla 16 (io)


estado 18

   17 io: salida .

    $default  reduce usando la regla 17 (io)


estado 19

    9 sentencia: condicional .

    $default  reduce usando la regla 9 (sentencia)


estado 20

   10 sentencia: iteracion .

    $default  reduce usando la regla 10 (sentencia)


estado 21

    4 sentencia: asignacion . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 39


estado 22

    2 programa: PR_MAIN declaracion_variables . lista_sentencias

    TOKEN_ID    desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8
    PR_AVERAGE  desplazar e ir al estado 9
    PR_BETWEEN  desplazar e ir al estado 11

    sentencia         ir al estado 12
    lista_sentencias  ir al estado 40
    between           ir al estado 14
    average           ir al estado 15
    io                ir al estado 16
    entrada           ir al estado 17
    salida            ir al estado 18
    condicional       ir al estado 19
    iteracion         ir al estado 20
    asignacion        ir al estado 21


estado 23

    0 $accept: pgm $end .

    $default  aceptar


estado 24

   31 asignacion: TOKEN_ID OP_IGUAL . expresion

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between    ir al estado 45
    expresion  ir al estado 46
    termino    ir al estado 47
    factor     ir al estado 48


estado 25

   19 salida: PR_WRITE TOKEN_ID .

    $default  reduce usando la regla 19 (salida)


estado 26

   20 salida: PR_WRITE CONST_STR .

    $default  reduce usando la regla 20 (salida)


estado 27

   18 entrada: PR_READ TOKEN_ID .

    $default  reduce usando la regla 18 (entrada)


estado 28

   21 condicional: PR_IF PAR_ABRE . condicion PAR_CIERRA then PR_ENDIF
   22            | PR_IF PAR_ABRE . condicion PAR_CIERRA then else PR_ENDIF

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_NOT       desplazar e ir al estado 49
    PR_BETWEEN   desplazar e ir al estado 11

    between      ir al estado 45
    condicion    ir al estado 50
    comparacion  ir al estado 51
    expresion    ir al estado 52
    termino      ir al estado 47
    factor       ir al estado 48


estado 29

   30 iteracion: PR_WHILE PAR_ABRE . condicion PAR_CIERRA PR_DO lista_sentencias PR_ENDWHILE

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_NOT       desplazar e ir al estado 49
    PR_BETWEEN   desplazar e ir al estado 11

    between      ir al estado 45
    condicion    ir al estado 53
    comparacion  ir al estado 51
    expresion    ir al estado 52
    termino      ir al estado 47
    factor       ir al estado 48


estado 30

   13 average: PR_AVERAGE PAR_ABRE . COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    COR_ABRE  desplazar e ir al estado 54


estado 31

   47 lista_variables: TOKEN_ID .
   48                | TOKEN_ID . COMA lista_variables

    COMA  desplazar e ir al estado 55

    $default  reduce usando la regla 47 (lista_variables)


estado 32

   44 declaracion_variables: PR_DECVAR linea_de_declaracion_de_tipos . PR_ENDDEC PUNTO_Y_COMA

    PR_ENDDEC  desplazar e ir al estado 56


estado 33

   45 linea_de_declaracion_de_tipos: lista_variables . DOS_PUNTOS tipo_dato PUNTO_Y_COMA
   46                              | lista_variables . DOS_PUNTOS tipo_dato PUNTO_Y_COMA linea_de_declaracion_de_tipos

    DOS_PUNTOS  desplazar e ir al estado 57


estado 34

   12 between: PR_BETWEEN PAR_ABRE . TOKEN_ID COMA COR_ABRE expresion PUNTO_Y_COMA expresion COR_CIERRA PAR_CIERRA

    TOKEN_ID  desplazar e ir al estado 58


estado 35

    8 lista_sentencias: sentencia lista_sentencias .

    $default  reduce usando la regla 8 (lista_sentencias)


estado 36

    5 sentencia: between PUNTO_Y_COMA .

    $default  reduce usando la regla 5 (sentencia)


estado 37

    6 sentencia: average PUNTO_Y_COMA .

    $default  reduce usando la regla 6 (sentencia)


estado 38

   11 sentencia: io PUNTO_Y_COMA .

    $default  reduce usando la regla 11 (sentencia)


estado 39

    4 sentencia: asignacion PUNTO_Y_COMA .

    $default  reduce usando la regla 4 (sentencia)


estado 40

    2 programa: PR_MAIN declaracion_variables lista_sentencias .

    $default  reduce usando la regla 2 (programa)


estado 41

   43 factor: TOKEN_ID .

    $default  reduce usando la regla 43 (factor)


estado 42

   41 factor: CONST_INT .

    $default  reduce usando la regla 41 (factor)


estado 43

   40 factor: CONST_STR .

    $default  reduce usando la regla 40 (factor)


estado 44

   42 factor: CONST_FLOAT .

    $default  reduce usando la regla 42 (factor)


estado 45

   39 factor: between .

    $default  reduce usando la regla 39 (factor)


estado 46

   31 asignacion: TOKEN_ID OP_IGUAL expresion .
   34 expresion: expresion . OP_SUMA termino
   35          | expresion . OP_RESTA termino

    OP_SUMA   desplazar e ir al estado 59
    OP_RESTA  desplazar e ir al estado 60

    $default  reduce usando la regla 31 (asignacion)


estado 47

   33 expresion: termino .
   37 termino: termino . OP_DIV factor
   38        | termino . OP_MUL factor

    OP_MUL  desplazar e ir al estado 61
    OP_DIV  desplazar e ir al estado 62

    $default  reduce usando la regla 33 (expresion)


estado 48

   32 expresion: factor . OP_CONCAT factor
   36 termino: factor .

    OP_CONCAT  desplazar e ir al estado 63

    $default  reduce usando la regla 36 (termino)


estado 49

   29 comparacion: PR_NOT . expresion

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between    ir al estado 45
    expresion  ir al estado 64
    termino    ir al estado 47
    factor     ir al estado 48


estado 50

   21 condicional: PR_IF PAR_ABRE condicion . PAR_CIERRA then PR_ENDIF
   22            | PR_IF PAR_ABRE condicion . PAR_CIERRA then else PR_ENDIF

    PAR_CIERRA  desplazar e ir al estado 65


estado 51

   25 condicion: comparacion .
   26          | comparacion . OP_LOG_AND comparacion
   27          | comparacion . OP_LOG_OR comparacion

    OP_LOG_AND  desplazar e ir al estado 66
    OP_LOG_OR   desplazar e ir al estado 67

    $default  reduce usando la regla 25 (condicion)


estado 52

   28 comparacion: expresion . comparador expresion
   34 expresion: expresion . OP_SUMA termino
   35          | expresion . OP_RESTA termino

    OP_SUMA         desplazar e ir al estado 59
    OP_RESTA        desplazar e ir al estado 60
    OP_MAYOR        desplazar e ir al estado 68
    OP_MAYOR_IGUAL  desplazar e ir al estado 69
    OP_MENOR        desplazar e ir al estado 70
    OP_MENOR_IGUAL  desplazar e ir al estado 71
    OP_DISTINTO     desplazar e ir al estado 72
    OP_IGUAL_IGUAL  desplazar e ir al estado 73

    comparador  ir al estado 74


estado 53

   30 iteracion: PR_WHILE PAR_ABRE condicion . PAR_CIERRA PR_DO lista_sentencias PR_ENDWHILE

    PAR_CIERRA  desplazar e ir al estado 75


estado 54

   13 average: PR_AVERAGE PAR_ABRE COR_ABRE . lista_expresiones COR_CIERRA PAR_CIERRA

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between            ir al estado 45
    lista_expresiones  ir al estado 76
    expresion          ir al estado 77
    termino            ir al estado 47
    factor             ir al estado 48


estado 55

   48 lista_variables: TOKEN_ID COMA . lista_variables

    TOKEN_ID  desplazar e ir al estado 31

    lista_variables  ir al estado 78


estado 56

   44 declaracion_variables: PR_DECVAR linea_de_declaracion_de_tipos PR_ENDDEC . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 79


estado 57

   45 linea_de_declaracion_de_tipos: lista_variables DOS_PUNTOS . tipo_dato PUNTO_Y_COMA
   46                              | lista_variables DOS_PUNTOS . tipo_dato PUNTO_Y_COMA linea_de_declaracion_de_tipos

    PR_FLOAT   desplazar e ir al estado 80
    PR_INT     desplazar e ir al estado 81
    PR_STRING  desplazar e ir al estado 82

    tipo_dato  ir al estado 83


estado 58

   12 between: PR_BETWEEN PAR_ABRE TOKEN_ID . COMA COR_ABRE expresion PUNTO_Y_COMA expresion COR_CIERRA PAR_CIERRA

    COMA  desplazar e ir al estado 84


estado 59

   34 expresion: expresion OP_SUMA . termino

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between  ir al estado 45
    termino  ir al estado 85
    factor   ir al estado 86


estado 60

   35 expresion: expresion OP_RESTA . termino

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between  ir al estado 45
    termino  ir al estado 87
    factor   ir al estado 86


estado 61

   38 termino: termino OP_MUL . factor

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between  ir al estado 45
    factor   ir al estado 88


estado 62

   37 termino: termino OP_DIV . factor

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between  ir al estado 45
    factor   ir al estado 89


estado 63

   32 expresion: factor OP_CONCAT . factor

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between  ir al estado 45
    factor   ir al estado 90


estado 64

   29 comparacion: PR_NOT expresion .
   34 expresion: expresion . OP_SUMA termino
   35          | expresion . OP_RESTA termino

    OP_SUMA   desplazar e ir al estado 59
    OP_RESTA  desplazar e ir al estado 60

    $default  reduce usando la regla 29 (comparacion)


estado 65

   21 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA . then PR_ENDIF
   22            | PR_IF PAR_ABRE condicion PAR_CIERRA . then else PR_ENDIF

    PR_THEN  desplazar e ir al estado 91

    then  ir al estado 92


estado 66

   26 condicion: comparacion OP_LOG_AND . comparacion

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_NOT       desplazar e ir al estado 49
    PR_BETWEEN   desplazar e ir al estado 11

    between      ir al estado 45
    comparacion  ir al estado 93
    expresion    ir al estado 52
    termino      ir al estado 47
    factor       ir al estado 48


estado 67

   27 condicion: comparacion OP_LOG_OR . comparacion

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_NOT       desplazar e ir al estado 49
    PR_BETWEEN   desplazar e ir al estado 11

    between      ir al estado 45
    comparacion  ir al estado 94
    expresion    ir al estado 52
    termino      ir al estado 47
    factor       ir al estado 48


estado 68

   52 comparador: OP_MAYOR .

    $default  reduce usando la regla 52 (comparador)


estado 69

   55 comparador: OP_MAYOR_IGUAL .

    $default  reduce usando la regla 55 (comparador)


estado 70

   53 comparador: OP_MENOR .

    $default  reduce usando la regla 53 (comparador)


estado 71

   54 comparador: OP_MENOR_IGUAL .

    $default  reduce usando la regla 54 (comparador)


estado 72

   57 comparador: OP_DISTINTO .

    $default  reduce usando la regla 57 (comparador)


estado 73

   56 comparador: OP_IGUAL_IGUAL .

    $default  reduce usando la regla 56 (comparador)


estado 74

   28 comparacion: expresion comparador . expresion

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between    ir al estado 45
    expresion  ir al estado 95
    termino    ir al estado 47
    factor     ir al estado 48


estado 75

   30 iteracion: PR_WHILE PAR_ABRE condicion PAR_CIERRA . PR_DO lista_sentencias PR_ENDWHILE

    PR_DO  desplazar e ir al estado 96


estado 76

   13 average: PR_AVERAGE PAR_ABRE COR_ABRE lista_expresiones . COR_CIERRA PAR_CIERRA

    COR_CIERRA  desplazar e ir al estado 97


estado 77

   14 lista_expresiones: expresion .
   15                  | expresion . COMA lista_expresiones
   34 expresion: expresion . OP_SUMA termino
   35          | expresion . OP_RESTA termino

    COMA      desplazar e ir al estado 98
    OP_SUMA   desplazar e ir al estado 59
    OP_RESTA  desplazar e ir al estado 60

    $default  reduce usando la regla 14 (lista_expresiones)


estado 78

   48 lista_variables: TOKEN_ID COMA lista_variables .

    $default  reduce usando la regla 48 (lista_variables)


estado 79

   44 declaracion_variables: PR_DECVAR linea_de_declaracion_de_tipos PR_ENDDEC PUNTO_Y_COMA .

    $default  reduce usando la regla 44 (declaracion_variables)


estado 80

   50 tipo_dato: PR_FLOAT .

    $default  reduce usando la regla 50 (tipo_dato)


estado 81

   49 tipo_dato: PR_INT .

    $default  reduce usando la regla 49 (tipo_dato)


estado 82

   51 tipo_dato: PR_STRING .

    $default  reduce usando la regla 51 (tipo_dato)


estado 83

   45 linea_de_declaracion_de_tipos: lista_variables DOS_PUNTOS tipo_dato . PUNTO_Y_COMA
   46                              | lista_variables DOS_PUNTOS tipo_dato . PUNTO_Y_COMA linea_de_declaracion_de_tipos

    PUNTO_Y_COMA  desplazar e ir al estado 99


estado 84

   12 between: PR_BETWEEN PAR_ABRE TOKEN_ID COMA . COR_ABRE expresion PUNTO_Y_COMA expresion COR_CIERRA PAR_CIERRA

    COR_ABRE  desplazar e ir al estado 100


estado 85

   34 expresion: expresion OP_SUMA termino .
   37 termino: termino . OP_DIV factor
   38        | termino . OP_MUL factor

    OP_MUL  desplazar e ir al estado 61
    OP_DIV  desplazar e ir al estado 62

    $default  reduce usando la regla 34 (expresion)


estado 86

   36 termino: factor .

    $default  reduce usando la regla 36 (termino)


estado 87

   35 expresion: expresion OP_RESTA termino .
   37 termino: termino . OP_DIV factor
   38        | termino . OP_MUL factor

    OP_MUL  desplazar e ir al estado 61
    OP_DIV  desplazar e ir al estado 62

    $default  reduce usando la regla 35 (expresion)


estado 88

   38 termino: termino OP_MUL factor .

    $default  reduce usando la regla 38 (termino)


estado 89

   37 termino: termino OP_DIV factor .

    $default  reduce usando la regla 37 (termino)


estado 90

   32 expresion: factor OP_CONCAT factor .

    $default  reduce usando la regla 32 (expresion)


estado 91

   23 then: PR_THEN . lista_sentencias

    TOKEN_ID    desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8
    PR_AVERAGE  desplazar e ir al estado 9
    PR_BETWEEN  desplazar e ir al estado 11

    sentencia         ir al estado 12
    lista_sentencias  ir al estado 101
    between           ir al estado 14
    average           ir al estado 15
    io                ir al estado 16
    entrada           ir al estado 17
    salida            ir al estado 18
    condicional       ir al estado 19
    iteracion         ir al estado 20
    asignacion        ir al estado 21


estado 92

   21 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA then . PR_ENDIF
   22            | PR_IF PAR_ABRE condicion PAR_CIERRA then . else PR_ENDIF

    PR_ENDIF  desplazar e ir al estado 102
    PR_ELSE   desplazar e ir al estado 103

    else  ir al estado 104


estado 93

   26 condicion: comparacion OP_LOG_AND comparacion .

    $default  reduce usando la regla 26 (condicion)


estado 94

   27 condicion: comparacion OP_LOG_OR comparacion .

    $default  reduce usando la regla 27 (condicion)


estado 95

   28 comparacion: expresion comparador expresion .
   34 expresion: expresion . OP_SUMA termino
   35          | expresion . OP_RESTA termino

    OP_SUMA   desplazar e ir al estado 59
    OP_RESTA  desplazar e ir al estado 60

    $default  reduce usando la regla 28 (comparacion)


estado 96

   30 iteracion: PR_WHILE PAR_ABRE condicion PAR_CIERRA PR_DO . lista_sentencias PR_ENDWHILE

    TOKEN_ID    desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8
    PR_AVERAGE  desplazar e ir al estado 9
    PR_BETWEEN  desplazar e ir al estado 11

    sentencia         ir al estado 12
    lista_sentencias  ir al estado 105
    between           ir al estado 14
    average           ir al estado 15
    io                ir al estado 16
    entrada           ir al estado 17
    salida            ir al estado 18
    condicional       ir al estado 19
    iteracion         ir al estado 20
    asignacion        ir al estado 21


estado 97

   13 average: PR_AVERAGE PAR_ABRE COR_ABRE lista_expresiones COR_CIERRA . PAR_CIERRA

    PAR_CIERRA  desplazar e ir al estado 106


estado 98

   15 lista_expresiones: expresion COMA . lista_expresiones

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between            ir al estado 45
    lista_expresiones  ir al estado 107
    expresion          ir al estado 77
    termino            ir al estado 47
    factor             ir al estado 48


estado 99

   45 linea_de_declaracion_de_tipos: lista_variables DOS_PUNTOS tipo_dato PUNTO_Y_COMA .
   46                              | lista_variables DOS_PUNTOS tipo_dato PUNTO_Y_COMA . linea_de_declaracion_de_tipos

    TOKEN_ID  desplazar e ir al estado 31

    $default  reduce usando la regla 45 (linea_de_declaracion_de_tipos)

    linea_de_declaracion_de_tipos  ir al estado 108
    lista_variables                ir al estado 33


estado 100

   12 between: PR_BETWEEN PAR_ABRE TOKEN_ID COMA COR_ABRE . expresion PUNTO_Y_COMA expresion COR_CIERRA PAR_CIERRA

    TOKEN_ID     desplazar e ir al estado 41
    CONST_INT    desplazar e ir al estado 42
    CONST_STR    desplazar e ir al estado 43
    CONST_FLOAT  desplazar e ir al estado 44
    PR_BETWEEN   desplazar e ir al estado 11

    between    ir al estado 45
    expresion  ir al estado 109
    termino    ir al estado 47
    factor     ir al estado 48


estado 101

   23 then: PR_THEN lista_sentencias .

    $default  reduce usando la regla 23 (then)


estado 102

   21 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA then PR_ENDIF .

    $default  reduce usando la regla 21 (condicional)


estado 103

   24 else: PR_ELSE . lista_sentencias

    TOKEN_ID    desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8
    PR_AVERAGE  desplazar e ir al estado 9
    PR_BETWEEN  desplazar e ir al estado 11

    sentencia         ir al estado 12
    lista_sentencias  ir al estado 110
    between           ir al estado 14
    average           ir al estado 15
    io                ir al estado 16
    entrada           ir al estado 17
    salida            ir al estado 18
    condicional       ir al estado 19
    iteracion         ir al estado 20
    asignacion        ir al estado 21


estado 104

   22 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA then else . PR_ENDIF

    PR_ENDIF  desplazar e ir al estado 111


estado 105

   30 iteracion: PR_WHILE PAR_ABRE condicion PAR_CIERRA PR_DO lista_sentencias . PR_ENDWHILE

    PR_ENDWHILE  desplazar e ir al estado 112


estado 106

   13 average: PR_AVERAGE PAR_ABRE COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA .

    $default  reduce usando la regla 13 (average)
